istio-k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
  - localhost.app.xyz
  - localhost.app1.xyz
  gateways:
  - my-gateway
  http:
  - match:
    - headers:
        host:
          exact: "localhost.app.xyz"
    route:
    - destination:
        host: myapp-service
        port:
          number: 80
  - match:
    - headers:
        host:
          exact: "localhost.app1.xyz"
    route:
    - destination:
        host: myapp1-service
        port:
          number: 80
